all pages created

--- a/About.html
+++ b/About.html
@@ -3,8 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
-    <link rel="stylesheet" href="StyleSheet1.css" />
+    <title>Perri Demopulos - About Me</title>
+    <link rel="stylesheet" href="AboutStyleSheet.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" \ />
 
 </head>
@@ -17,11 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="Index.html">Me</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="navbar navbar-nav navbar-right">
+                    <li><a href="Index.html">HOME|</a></li>
                     <li><a href="About.html">ABOUT ME|</a></li>
                     <li><a href="Projects.html"> PROJECTS|</a></li>
                     <li><a href="SkillSets.html"> SKILLS|</a></li>
@@ -52,12 +54,50 @@
         <li><a href="EmploymentHistory.html">Employment History</a></li>
     </ul>-->
 
-    <div class="about">
-        <h1>About Me</h1>
-        <p>
-            Hello.
-        </p>
+    <div class="container-fluid1">
+        <h3>About Me</h3>
+        <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/29244357_1518488431534060_9080197136790725513_n.jpg?_nc_cat=104&_nc_ht=scontent-dfw5-2.xx&oh=ee90019da1a0c6cdcab73b6543e9dd83&oe=5D3D9F75" width="250" height="100" class="img-responsive img-circle" style="display:inline" alt="Me" />
     </div>
 
+    <div class="container-fluid2">
+        <h3>The University of Oklahoma</h3>
+        <h4>Norman, Oklahoma</h4>
+        <p>International Business | Management Information Systems</p>
+        <p>August 2015 - May 2019</p>
+        <h3>International Studies Abroad</h3>
+        <h4>Sevilla, Spain</h4>
+        <p>January 2018 - May 2018</p>
+        <h3>Hult International Business School</h3>
+        <h4>London, England | San Francisco, California</h4>
+        <p>Masters of International Business | Masters of Business Analytics</p>
+        <p>Expected September 2019 - December 2020</p>
+    </div>
+
+    <div class="container-fluid3">
+        <div class="row">
+            <div class="col-sm-4">
+                <h3>Honors & Activities</h3>
+                <ul>
+                    <li>Price College Dean's Honor Roll</li>
+                    <li>Member, International Business Student Association</li>
+                    <li>Member, M.I.S. Student Association</li>
+                    <li>Member, Oklahoma Creativity Festival</li>
+                    <li>Alumn, Alpha Chi Omega</li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <h3>Leadership</h3>
+                <ul>
+                    <li>M.I.S. Field Project Team Leader</li>
+                    <li>Recruitment Assistant</li>
+                    <li>Points Chair</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+<footer class="container-fluidF bg-4 text-center">
+    <p>Bootstrap Theme made by <a href="https://www.w3schools.com">www.w3schools.com</a></p>
+    <p>Modified April 2019</p>
+</footer>
