--- a/EmploymentHistory.html
+++ b/EmploymentHistory.html
@@ -3,9 +3,9 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
-    <link rel="stylesheet" href="StyleSheet1.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"\/>
+    <title>Perri Demopulos - Employment History</title>
+    <link rel="stylesheet" href="EmploymentStyleSheet.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" \ />
 
 </head>
 <body>
@@ -17,11 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="Index.html">Me</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="navbar navbar-nav navbar-right">
+                    <li><a href="Index.html">HOME|</a></li>
                     <li><a href="About.html">ABOUT ME|</a></li>
                     <li><a href="Projects.html"> PROJECTS|</a></li>
                     <li><a href="SkillSets.html"> SKILLS|</a></li>
@@ -52,33 +54,46 @@
         <li class="active"><a href="EmploymentHistory.html">Employment History</a></li>
     </ul>-->
 
-    <div class="Employment">
-        <h1>Retail Intern</h1>
-        <h2>Omni Hotels & Resorts</h2>
-        <h3>Jun. 2018 - Aug. 2018 | 3 months</h3>
-        <ul>
-            <li>Input purchase order information</li>
-            <li>Acted as liason between vendors and properties</li>
-            <li>Attended vendor meetings with retail buyers</li>
-        </ul>
-        <h1>Logistics Processor</h1>
-        <h2>Nordstrom</h2>
-        <h3>May 2017 - Aug. 2018 | 1 yr 4 months</h3>
-        <ul>
-            <li>Worked on the web team at their location in Dallas</li>
-            <li>Fulfilled online orders and pick up in store orders</li>
-            <li>Monitored store inventory and replinished from sttore back stock</li>
-            <li>Searched for and reported on lost inventory</li>
-        </ul>
-        <h1>Processor Assistant</h1>
-        <h2>Cornerstone Home Lending, Inc.</h2>
-        <h3>Jun. 2012 - Jul. 2017 | 5 yrs 2 months</h3>
-        <ul>
-            <li>Worked summers for 5 years assisting mortgage loan processors and officers/li>
-            <li>Ordered and reviewed title documents, appraisals, credit reports, evidence of homeowners insurance, social security verifications, flood verifications and verifications of employment</li>
-            <li>Quickly learned to work within Loansoft, the mortgage company's loan information computer program</li>
-        </ul>
+    <div class="container-fluid1">
+        <h3>My Employment History</h3>
+    </div>
 
+    <div class="container-fluid2">
+        <h3>Retail Intern</h3>
+        <h4>Omni Hotels & Resorts</h4>
+        <h5>Jun. 2018 - Aug. 2018 | 3 months</h5>
+        <h6>Input purchase order information</h6>
+        <h6>Acted as liason between vendors and properties</h6>
+        <h6>Attended vendor meetings with retail buyers</h6>
+        <img src="https://assets.hospitalityonline.com/brands/employers/logos/000/204/070/logo.png?1368549867" width="250" height="100" class="img-responsive" style="display:inline" alt="Omni" />
+    </div>
+
+    <div class="container-fluid3">
+        <h3>Logistics Processor</h3>
+        <h4>Nordstrom</h4>
+        <h5>May 2017 - Aug. 2018 | 1 yr 4 months</h5>
+        <h6>Worked on the web team at their location in Dallas</h6>
+        <h6>Fulfilled online orders and pick up in store orders</h6>
+        <h6>Monitored store inventory and replinished from sttore back stock</h6>
+        <h6>Searched for and reported on lost inventory</h6>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Nordstrom_Logo.svg/1280px-Nordstrom_Logo.svg.png" width="250" height="100" class="img-responsive" style="display:inline" alt="Nordstrom" />
+    </div>
+
+
+    <div class="container-fluid4">
+        <h3>Processor Assistant</h3>
+        <h4>Cornerstone Home Lending, Inc.</h4>
+        <h5>Jun. 2012 - Jul. 2017 | 5 yrs 2 months</h5>
+        <h6>Worked summers for 5 years assisting mortgage loan processors and officers</h6>
+        <h6>Ordered and reviewed title documents, appraisals, credit reports, evidence of homeowners insurance, social security verifications, flood verifications and verifications of employment</h6>
+        <h6>Quickly learned to work within Loansoft, the mortgage company's loan information computer program</h6>
+
+        <img src="https://chambermaster.blob.core.windows.net/images/customers/790/members/423/logos/MEMBER_PAGE_HEADER/CHL_Full_Color_Stacked.png" width="250" height="100" class="img-responsive" style="display:inline" alt="Cornerstone" />
     </div>
 </body>
 </html>
+<!--https://sites.google.com/a/colegiocalderondelabarca.es/ciclo-educacion-infantil/_/rsrc/1467895679021/config/app/images/customLogo/customLogo.gif?revision=1-->
+<footer class="container-fluidF bg-4 text-center">
+    <p>Bootstrap Theme made by <a href="https://www.w3schools.com">www.w3schools.com</a></p>
+    <p>Modified April 2019</p>
+</footer>
