--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Perri Demopulos</title>
-    <link rel="stylesheet" href="StyleSheet1.css" />
+    <link rel="stylesheet" href="IndexStyleSheet.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.31/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -19,11 +19,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="Index.html">Me</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="navbar navbar-nav navbar-right">
+                    <li><a href="Index.html">HOME|</a></li>
                     <li><a href="About.html">ABOUT ME|</a></li>
                     <li><a href="Projects.html"> PROJECTS|</a></li>
                     <li><a href="SkillSets.html"> SKILLS|</a></li>
@@ -75,17 +77,18 @@
             </div>
             <div class="col-sm-4">
                 <p>In the spring of 2018, I studied abroad in Sevilla, Spain for four months, taking various international businesses courses and utilizing my Spanish.</p>
-                <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/58376904_2031608413555390_7086174290067849216_n.jpg?_nc_cat=106&_nc_ht=scontent-dfw5-2.xx&oh=018f5c6d0c03fe592366e114ff5e4ffa&oe=5D7734B1" class="img-responsive" style="width:100%" alt="Image" />
+                <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t31.0-8/27993120_1492096837506553_8593044428766238591_o.jpg?_nc_cat=104&_nc_ht=scontent-dfw5-2.xx&oh=19fceefeb068ff8bc84cd0be15a1e155&oe=5D3259B7" class="img-responsive" style="width:100%" alt="Image" />
             </div>
             <div class="col-sm-4">
                 <p>This fall I will be attending Hult International Business School in London pursing a Masters in International Business.</p>
                 <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/58376904_2031608413555390_7086174290067849216_n.jpg?_nc_cat=106&_nc_ht=scontent-dfw5-2.xx&oh=018f5c6d0c03fe592366e114ff5e4ffa&oe=5D7734B1" class="img-responsive" style="width:100%" alt="Image" />
             </div>
         </div>
-
     </div>
 </body>
-<footer class="container-fluid bg-4 text-center">
+</html>
+
+<footer class="container-fluidF bg-4 text-center">
+    <p>Bootstrap Theme made by <a href="https://www.w3schools.com">www.w3schools.com</a></p>
     <p>Modified April 2019</p>
 </footer>
-</html>
