--- a/SkillSets.html
+++ b/SkillSets.html
@@ -3,8 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Perri Demopulos Skills</title>
-    <link rel="stylesheet" href="StyleSheet1.css" />
+    <title>Perri Demopulos - Skills</title>
+    <link rel="stylesheet" href="SkillStyleSheet.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" \ />
 
 
@@ -18,11 +18,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="Index.html">Me</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="navbar navbar-nav navbar-right">
+                    <li><a href="Index.html">HOME|</a></li>
                     <li><a href="About.html">ABOUT ME|</a></li>
                     <li><a href="Projects.html"> PROJECTS|</a></li>
                     <li><a href="SkillSets.html"> SKILLS|</a></li>
@@ -53,24 +55,49 @@
         <li><a href="EmploymentHistory.html">Employment History</a></li>
     </ul>-->
 
-    <div class="skills">
-        <h1>Skills</h1>
-        <ul>
-            <li>C#</li>
-            <li>SQL</li>
-            <li>Microsoft Word</li>
-            <li>Microsoft Excel</li>
-            <li>Microsoft PowerPoint</li>
-            <li>Microsoft SQL Server</li>
-            <li>Visual Basic for Applications (VBA)</li>
-            <li>Spanish, Advanced</li>
-            <li>Time Management</li>
-            <li>Team Management</li>
-            <li>Cross-Cultural Teams</li>
-            <li>Multi-Cultural Team Management</li>
-            <li>Cross-Cultural Communication Skills</li>
-        </ul>
+    <div class="container-fluid1">
+        <h3>My skills</h3>
     </div>
 
+    <div class="container-fluid2">
+        <div class="row">
+            <div class="col-sm-4">
+                <h4>Tools & Technologies</h4>
+                <p>Microsoft Office</p>
+                <p>Microsoft Word</p>
+                <p>Microsoft PowerPoint</p>
+                <p>Microsoft Excel</p>
+                <p>Microsoft SQL Server</p>
+                <p>Microsoft Visual Studio C++</p>
+                <p>SQL</p>
+                <p>Visual Basic for Application (VBA)</p>
+                <p>Agisoft PhotoScan</p>
+                <p>StackShot</p>
+                <p>Helicon Focus</p>
+                <p>Canon DSLR</p>
+            </div>
+            <div class="col-sm-4">
+                <h4>Interpersonal Skills</h4>
+                <p>Customer Service</p>
+                <p>Time Management</p>
+                <p>Team Management</p>
+                <p>Spanish</p>
+            </div>
+            <div class="col-sm-4">
+                <h4>Other Skills</h4>
+                <p>Organization</p>
+                <p>Multi-cultural Team Management</p>
+                <p>Cross-cultural Teams</p>
+                <p>Cross-Cultural Communication Skills</p>
+                <p>Programming</p>
+                <p>Social Media</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
+<footer class="container-fluidF bg-4 text-center">
+    <p>Bootstrap Theme made by <a href="https://www.w3schools.com">www.w3schools.com</a></p>
+    <p>Modified April 2019</p>
+</footer>
