all sections worked on

--- a/About.html
+++ b/About.html
@@ -93,11 +93,27 @@
                     <li>Points Chair</li>
                 </ul>
             </div>
+            <div class="col-sm-4">
+                <h3>Activities & Hobbies</h3>
+                <ul>
+                    <li>Amateur Photographer</li>
+                    <li>Long Distance Runner  (2 Half Marathons)</li>
+                </ul>
+            </div>
         </div>
     </div>
+    <div class="container-fluid4">
+        <h3>Contact Information</h3>
+        <p>Email: perri.demopulos@ou.edu</p>
+        <p>Github: <a target="_blank" href="https://github.com/perridemop">github.com/perridemop</a></p>
+        <p>Linked In: <a target="_blank" href="https://www.linkedin.com/in/perri-demopulos">www.linkedin.com/in/perri-demopulos</a></p>
+        <p>Facebook: <a target="_blank" href="https://www.facebook.com/perri.demopulos">www.facebook.com/perri.demopulos</a></p>
+        <p>Instagram: <a target="_blank" href="https://www.instagram.com/little_house_on_the_perri/">www.instagram.com/little_house_on_the_perri/</a></p>
+    </div>
+
 </body>
 </html>
 <footer class="container-fluidF bg-4 text-center">
-    <p>Bootstrap Theme made by <a href="https://www.w3schools.com">www.w3schools.com</a></p>
-    <p>Modified April 2019</p>
+    <p>Bootstrap Theme made by <a target="_blank" href="https://www.w3schools.com">www.w3schools.com</a></p>
+    <p>Modified April 2019 by Perri Demopulos</p>
 </footer>
