--- a/EmploymentHistory.html
+++ b/EmploymentHistory.html
@@ -94,6 +94,6 @@
 </html>
 <!--https://sites.google.com/a/colegiocalderondelabarca.es/ciclo-educacion-infantil/_/rsrc/1467895679021/config/app/images/customLogo/customLogo.gif?revision=1-->
 <footer class="container-fluidF bg-4 text-center">
-    <p>Bootstrap Theme made by <a href="https://www.w3schools.com">www.w3schools.com</a></p>
-    <p>Modified April 2019</p>
+    <p>Bootstrap Theme made by <a target="_blank" href="https://www.w3schools.com">www.w3schools.com</a></p>
+    <p>Modified April 2019 by Perri Demopulos</p>
 </footer>
