--- a/Index.html
+++ b/Index.html
@@ -69,15 +69,15 @@
 
     <div class="container-fluid3">
         <h3>Introduction</h3>
-        <p>I'm a senior at the University of Oklahoma graduating with a degree in International Business and Management Information Systems with a minor in Spanish. This fall I will be pursing a Masters in International Business in London.</p>
+        <h4>I'm a senior at the University of Oklahoma graduating May 2019. This fall I will be pursing a Masters in International Business in London.</h4>
         <div class="row">
             <div class="col-sm-4">
                 <p>In August of 2015, I began studying International Business and Management Information Systems at the University of Oklahoma.</p>
-                <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/58376904_2031608413555390_7086174290067849216_n.jpg?_nc_cat=106&_nc_ht=scontent-dfw5-2.xx&oh=018f5c6d0c03fe592366e114ff5e4ffa&oe=5D7734B1" class="img-responsive" style="width:100%" alt="Image" />
+                <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/49547391_1877894848926748_7003607164459679744_n.jpg?_nc_cat=108&_nc_ht=scontent-dfw5-2.xx&oh=8a6793ca7546a554506772f34ee8d53b&oe=5D3AF43F" class="img-responsive" style="width:100%" alt="Image" />
             </div>
             <div class="col-sm-4">
                 <p>In the spring of 2018, I studied abroad in Sevilla, Spain for four months, taking various international businesses courses and utilizing my Spanish.</p>
-                <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t31.0-8/27993120_1492096837506553_8593044428766238591_o.jpg?_nc_cat=104&_nc_ht=scontent-dfw5-2.xx&oh=19fceefeb068ff8bc84cd0be15a1e155&oe=5D3259B7" class="img-responsive" style="width:100%" alt="Image" />
+                <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/27972250_1492101464172757_2930654718751399284_n.jpg?_nc_cat=110&_nc_ht=scontent-dfw5-2.xx&oh=1004f606d4c15b080240fbd52dd4e714&oe=5D2CE6EF" class="img-responsive" style="width:100%" alt="Image" />
             </div>
             <div class="col-sm-4">
                 <p>This fall I will be attending Hult International Business School in London pursing a Masters in International Business.</p>
@@ -89,6 +89,6 @@
 </html>
 
 <footer class="container-fluidF bg-4 text-center">
-    <p>Bootstrap Theme made by <a href="https://www.w3schools.com">www.w3schools.com</a></p>
-    <p>Modified April 2019</p>
+    <p>Bootstrap Theme made by <a target="_blank" href="https://www.w3schools.com">www.w3schools.com</a></p>
+    <p>Modified April 2019 by Perri Demopulos</p>
 </footer>
