--- a/Projects.html
+++ b/Projects.html
@@ -76,12 +76,16 @@
                 <h4>Don't M.I.S. IT Competition</h4>
                 <p>First place winner at the fall 2016 Don't M.I.S. IT Competition. Created and presented an app design that would peak high school students' interest to study the STEM subjects.</p>
             </div>
+            <div class="col-sm-4">
+                <h4>GitHub Repositories</h4>
+                <p>These repositories include projects and homeworks from my programming courses.<a target="_blank" href="https://github.com/perridemop">github.com/perridemop</a></p>
+            </div>
         </div>
     </div>
 </body>
 </html>
 
 <footer class="container-fluidF bg-4 text-center">
-    <p>Bootstrap Theme made by <a href="https://www.w3schools.com">www.w3schools.com</a></p>
-    <p>Modified April 2019</p>
+    <p>Bootstrap Theme made by <a target="_blank" href="https://www.w3schools.com">www.w3schools.com</a></p>
+    <p>Modified April 2019 by Perri Demopulos</p>
 </footer>
