--- a/SkillSets.html
+++ b/SkillSets.html
@@ -56,7 +56,7 @@
     </ul>-->
 
     <div class="container-fluid1">
-        <h3>My skills</h3>
+        <h3>My Skills</h3>
     </div>
 
     <div class="container-fluid2">
@@ -98,6 +98,6 @@
 </html>
 
 <footer class="container-fluidF bg-4 text-center">
-    <p>Bootstrap Theme made by <a href="https://www.w3schools.com">www.w3schools.com</a></p>
-    <p>Modified April 2019</p>
+    <p>Bootstrap Theme made by <a target="_blank" href="https://www.w3schools.com">www.w3schools.com</a></p>
+    <p>Modified April 2019 by Perri Demopulos</p>
 </footer>
